@@ -1,4 +1,8 @@
 import 'package:dio/dio.dart';
+<<<<<<< HEAD
+=======
+import 'package:flutter/foundation.dart';
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 
 class DioService {
   final Dio _dio = Dio(BaseOptions(
@@ -11,6 +15,7 @@ class DioService {
   Future<Response?> postPatient(Map<String, dynamic> data) async {
     try {
       final response = await _dio.post('/add_patient', data: data);
+<<<<<<< HEAD
       print('Response: ${response.data}');
       return response; // Return the response object
     } on DioException catch (e) {
@@ -18,6 +23,15 @@ class DioService {
       return e.response; // Return the response to handle errors properly
     } catch (e) {
       print('Error: $e');
+=======
+      debugPrint('Response: ${response.data}');
+      return response; // Return the response object
+    } on DioException catch (e) {
+      debugPrint('DioError: ${e.response?.data ?? e.message}');
+      return e.response; // Return the response to handle errors properly
+    } catch (e) {
+      debugPrint('Error: $e');
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
       return null; // Return null for unexpected errors
     }
   }
@@ -25,6 +39,7 @@ class DioService {
   Future<Response?> postClinicalHistory(Map<String, dynamic> data) async {
     try {
       final response = await _dio.post('/add_clinical_history', data: data);
+<<<<<<< HEAD
       print('Response: ${response.data}');
       return response;
     } on DioException catch (e) {
@@ -32,6 +47,15 @@ class DioService {
       return e.response;
     } catch (e) {
       print('Error: $e');
+=======
+      debugPrint('Response: ${response.data}');
+      return response;
+    } on DioException catch (e) {
+      debugPrint('DioError: ${e.response?.data ?? e.message}');
+      return e.response;
+    } catch (e) {
+      debugPrint('Error: $e');
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
       return null;
     }
   }
