@@ -1,3 +1,8 @@
+<<<<<<< HEAD
+=======
+// ignore_for_file: depend_on_referenced_packages
+
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 import 'package:flutter/material.dart';
 import 'package:intl/intl.dart';
 
@@ -28,13 +33,21 @@ class AppointmentProvider extends ChangeNotifier {
       notifyListeners(); // Notify UI of changes
     }
   }
+<<<<<<< HEAD
 
+=======
+  
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
   Future<void> selectTime(BuildContext context, TextEditingController controller) async {
     TimeOfDay? pickedTime = await showTimePicker(
       context: context,
       initialTime: TimeOfDay.now(),
     );
     if (pickedTime != null) {
+<<<<<<< HEAD
+=======
+      if (!context.mounted) return;
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
       controller.text = pickedTime.format(context);
       notifyListeners();
     }
