@@ -1,12 +1,23 @@
 import 'package:flutter/material.dart';
+<<<<<<< HEAD
 import 'package:app_herbal_flutter/dio/dio_get.dart'; // Import DioGet for fetching data
+=======
+import 'package:app_herbal_flutter/src/api/provider/clinical_history/clinical_history_services.dart';
+
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 class ClinicalHistoryProvider extends ChangeNotifier {
   bool isDataFetched = false;
   bool isLoading = false;
 
+<<<<<<< HEAD
 TextEditingController clinicalHistoryController = TextEditingController();
 TextEditingController patientCharacteristicsController = TextEditingController();
 TextEditingController consultReasonController = TextEditingController();
+=======
+  TextEditingController clinicalHistoryController = TextEditingController();
+  TextEditingController patientCharacteristicsController = TextEditingController();
+  TextEditingController consultReasonController = TextEditingController();
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 
   void clearData() {
     clinicalHistoryController.clear();
@@ -16,6 +27,7 @@ TextEditingController consultReasonController = TextEditingController();
     notifyListeners();
   }
 
+<<<<<<< HEAD
 Future<void> fetchClinicalHistory(dynamic patientId) async {
   isLoading = true;
   notifyListeners();
@@ -41,6 +53,45 @@ Future<void> fetchClinicalHistory(dynamic patientId) async {
   isLoading = false;
   notifyListeners();
 }
+=======
+  Future<void> fetchClinicalHistory(dynamic patientId) async {
+    isLoading = true;
+    notifyListeners();
+
+    try {
+      final history = await ClinicalHistoryService.fetchClinicalHistory(int.parse(patientId));
+
+      if (history.isNotEmpty) {
+        clinicalHistoryController.text = history['clinical_history'] ?? '';
+        patientCharacteristicsController.text = history['patient_characteristics']['details'] ?? '';
+        consultReasonController.text = history['consult_reason'] ?? '';
+
+        isDataFetched = true;
+      }
+    } catch (e) {
+      debugPrint("Error fetching clinical history: $e");
+    }
+
+    isLoading = false;
+    notifyListeners();
+  }
+
+  Future<bool> createClinicalHistory(dynamic patientId) async {
+    final success = await ClinicalHistoryService.createClinicalHistory(
+      patientId,
+      clinicalHistoryController.text,
+      patientCharacteristicsController.text,
+      consultReasonController.text,
+    );
+
+    if (success) {
+      isDataFetched = true;
+      notifyListeners();
+    }
+    return success;
+  }
+
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
   @override
   void dispose() {
     clinicalHistoryController.dispose();
@@ -48,4 +99,8 @@ Future<void> fetchClinicalHistory(dynamic patientId) async {
     consultReasonController.dispose();
     super.dispose();
   }
+<<<<<<< HEAD
 }
+=======
+}
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
