@@ -4,7 +4,11 @@ import 'package:provider/provider.dart';
 import 'package:app_herbal_flutter/src/theme/default.dart';
 import 'package:app_herbal_flutter/src/components/custom_input.dart';
 import 'package:app_herbal_flutter/src/components/custom_button.dart';
+<<<<<<< HEAD
 import 'package:app_herbal_flutter/src/api/provider/auth_services/dio_auth_provider.dart';
+=======
+import 'package:app_herbal_flutter/src/api/provider/auth_services/auth_provider.dart';
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 import 'package:app_herbal_flutter/src/functions/login_functions/forgot_password.dart';
 import 'package:app_herbal_flutter/src/functions/login_functions/submit_login.dart'; 
 
