@@ -5,7 +5,11 @@ import 'package:app_herbal_flutter/src/theme/default.dart';
 import 'package:flutter/material.dart';
 import 'package:app_herbal_flutter/src/api/bottom_nav_index_provider.dart';
 import 'package:provider/provider.dart';
+<<<<<<< HEAD
 import 'package:app_herbal_flutter/src/api/provider/auth_services/dio_auth_provider.dart';
+=======
+import 'package:app_herbal_flutter/src/api/provider/auth_services/auth_provider.dart';
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 
 class PaginaPrincipal extends StatelessWidget {
   const PaginaPrincipal({super.key});
