@@ -4,7 +4,10 @@ import 'package:app_herbal_flutter/src/components/custom_button.dart';
 import 'package:app_herbal_flutter/src/components/custom_input.dart';
 import 'package:app_herbal_flutter/src/api/provider/patient_services/patient_provider.dart';
 import 'package:provider/provider.dart';
+<<<<<<< HEAD
 import 'package:app_herbal_flutter/dio/dio_post.dart';
+=======
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 import 'package:app_herbal_flutter/src/api/provider/clinical_history/clinical_history_provider.dart';
 
 class ClinicalHistoryPage extends StatefulWidget {
@@ -15,7 +18,11 @@ class ClinicalHistoryPage extends StatefulWidget {
 }
 
 class ClinicalHistoryPageState extends State<ClinicalHistoryPage> {
+<<<<<<< HEAD
  // Prevent multiple fetches
+=======
+ 
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
   late TextEditingController clinicalHistoryController;
   late TextEditingController patientCharacteristicsController;
   late TextEditingController consultReasonController;
@@ -133,6 +140,7 @@ class ClinicalHistoryPageState extends State<ClinicalHistoryPage> {
                   ),
                   const SizedBox(height: 20),
                   // Historia Clínica input field
+<<<<<<< HEAD
 Consumer<ClinicalHistoryProvider>(
   builder: (context, provider, child) {
     return CustomInput(
@@ -148,6 +156,23 @@ Consumer<ClinicalHistoryProvider>(
     );
   },
 ),
+=======
+                  Consumer<ClinicalHistoryProvider>(
+                    builder: (context, provider, child) {
+                      return CustomInput(
+                        controller: provider.clinicalHistoryController,  // Use the controller
+                        keyboardType: TextInputType.text,
+                        labelText: 'Historia Clínica',
+                        hintText: 'Ingrese la historia clínica del paciente',
+                        icon: Icons.history,
+                        borderColor: Colors.transparent,
+                        iconColor: Colors.white,
+                        fillColor: CustomTheme.containerColor,
+                        fontSize: 22,
+                      );
+                    },
+                  ),
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
                   const SizedBox(height: 20),
                   // Características del Paciente input field
                 Consumer<ClinicalHistoryProvider>(
@@ -199,6 +224,7 @@ Consumer<ClinicalHistoryProvider>(
                             fontSize: 22,
                             fontWeight: FontWeight.bold,
                           ),
+<<<<<<< HEAD
 onPressed: () async {
   final dioService = DioService();
   final provider = Provider.of<ClinicalHistoryProvider>(context, listen: false);
@@ -228,6 +254,25 @@ onPressed: () async {
     );
   }
 },
+=======
+                          onPressed: () async {
+                            final provider = Provider.of<ClinicalHistoryProvider>(context, listen: false);
+                            bool success = await provider.createClinicalHistory(patient.id);
+
+                            if (!context.mounted) return;
+
+                            if (success) {
+                              Navigator.pushNamed(context, '/home');
+                              ScaffoldMessenger.of(context).showSnackBar(
+                                const SnackBar(content: Text("Historia Clínica guardada con éxito!")),
+                              );
+                            } else {
+                              ScaffoldMessenger.of(context).showSnackBar(
+                                const SnackBar(content: Text("Error al guardar los datos")),
+                              );
+                            }
+                          },
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
                         ),
                       // Show "Actualizar Datos" only if data is fetched
                       if (clinicalHistoryProvider.isDataFetched) 
