@@ -1,6 +1,10 @@
 import 'package:flutter/material.dart';
 import 'package:provider/provider.dart';
+<<<<<<< HEAD
 import 'package:app_herbal_flutter/src/api/provider/auth_services/dio_auth_provider.dart';
+=======
+import 'package:app_herbal_flutter/src/api/provider/auth_services/auth_provider.dart';
+>>>>>>> f4e8f26 (FEAT/FIX/CLINICAL_HISTORY/LOGIN)
 
 class SplashPage extends StatefulWidget {
   const SplashPage({super.key});
